# shengju

./: .dockerignore  .gitignore  .sync-timestamp  ecosystem.config.js  package-lock.json  package.json  pub_key.pem  shengjuceping.cn.key  shengjuceping.cn.pem  sync-to-server.sh  tailwind.config.js  test-optimization-v2.js  test-optimization.js  test-user-end-optimization.js  启动子账号阅卷系统.bat  启动应用.bat  快速启动.bat  检查服务状态.bat  注册并发优化方案.md  用户端-2000人同时在线性能优化方案.md  考试子系统-生产部署说明.md  考试模块-性能瓶颈分析与优化方案.md
.github/workflows/: build-windows-installer.yml
WXCertUtil/: quazip.lib  quazipd.lib
WXCertUtil/cert/: apiclient_cert.p12  apiclient_cert.pem
assets/: desktab.html
backend/: .env.example  .gitignore  DEPLOYMENT_2000_CONCURRENT.md  DEPLOY_SERVER.md  README-配置.md  install-on-server.sh  package-lock.json  package.json  server.js  start.bat  执行迁移.bat  环境配置说明.md  运行试卷表迁移.bat  阅卷统计功能修复说明.md
backend/config/: database.js  userDatabase.js
backend/database/: README_exam_subjective_answers.md  README_如何执行迁移.md  README_考试汇总和评估报告.md  README_阅卷系统迁移.md  add_difficulty_to_sub_questions.sql  create_exam_enrollments_if_missing.sql  create_table_manager.sql  init.sql  migrate_add_answer_system_config.sql  migrate_dynamic_tables.sql  (+39 more)
deploy/: README.md  cluster-deployment-guide.md  remote-deploy.sh  upload-and-deploy.ps1
legacy-shengju/: index.html  启动圣举人才网.bat  圣举人才网-启动说明.txt  本地部署测试教程.md
release-20260609/: CLAUDE.md
src/: admin.html  app.html  index.html  题库管理.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: commands.rs  lib.rs  main.rs
(+385 files in other folders)
